--- a/meta/main.yml
+++ b/meta/main.yml
@@ -47,6 +47,5 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies:
-- UniInc.fn-Reboot
-#- .fn/initramfs
+dependencies: []
+#
