--- a/tasks/Archlinux/main.yml
+++ b/tasks/Archlinux/main.yml
@@ -1,2 +1,4 @@
+---
+
 - name: OS specific
-  include_tasks: '{{ ansible_distribution }}/main.yml'
+  include_tasks: "{{ ansible_distribution }}/{{ ansible_distribution }}/main.yml"
